@@ -62,7 +62,7 @@ Port=3000
 Custom Fields=lcc
 
 [kinopoisk]
-Custom Fields=origtitle
+Custom Fields=origtitle,kinopoisk
 
 [douban]
 Custom Fields=douban,origtitle
